src/test/deca/syntax/invalid/HelloWorld/authorized_tokens.deca
// Description:
//    Program using all the accepted lexems in Deca.
//
// Results:
//    Line 11 : syntax error.
//    test_lex should not return an error.
//
// History:
//    created on 05/01/2022

"OBRACE:" {
"CBRACE:" }
"STRINGS:" "HelloWorld\\"
"SEMI:" ;
"WS:"   
/* on ne teste pas le /r */
